[HITG] new: "Adding Interfaces folder with IHTaskRepository and IUnitOfWork Interfaces classes

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,47 @@ HTask.Infrastructure/obj/Debug/net10.0/HTask.Infrastructure.GeneratedMSBuildEdit
 HTask.Infrastructure/obj/HTask.Infrastructure.csproj.nuget.dgspec.json
 HTask.Infrastructure/obj/project.assets.json
 HTask.Infrastructure/obj/project.nuget.cache
+.vs/HTaskSolution.slnx/DesignTimeBuild/.dtbcache.v2
+*.suo
+.vs/HTaskSolution.slnx/v18/DocumentLayout.backup.json
+.vs/HTaskSolution.slnx/v18/DocumentLayout.json
+HTask.API/bin/Debug/net10.0/HTask.API.dll
+HTask.API/bin/Debug/net10.0/HTask.API.exe
+HTask.API/bin/Debug/net10.0/HTask.API.pdb
+HTask.API/bin/Debug/net10.0/HTask.Application.dll
+HTask.API/bin/Debug/net10.0/HTask.Application.pdb
+HTask.API/bin/Debug/net10.0/HTask.Domain.dll
+HTask.API/bin/Debug/net10.0/HTask.Domain.pdb
+HTask.API/bin/Debug/net10.0/HTask.Infrastructure.dll
+HTask.API/bin/Debug/net10.0/HTask.Infrastructure.pdb
+HTask.API/obj/Debug/net10.0/ref/HTask.API.dll
+HTask.API/obj/Debug/net10.0/refint/HTask.API.dll
+HTask.API/obj/Debug/net10.0/apphost.exe
+HTask.API/obj/Debug/net10.0/HTask.API.dll
+HTask.API/obj/Debug/net10.0/HTask.API.pdb
+HTask.API/obj/Debug/net10.0/HTask.API.sourcelink.json
+HTask.API/obj/Debug/net10.0/rjsmcshtml.dswa.cache.json
+HTask.API/obj/Debug/net10.0/rjsmrazor.dswa.cache.json
+HTask.Application/bin/Debug/net10.0/HTask.Application.dll
+HTask.Application/bin/Debug/net10.0/HTask.Application.pdb
+HTask.Application/bin/Debug/net10.0/HTask.Domain.dll
+HTask.Application/bin/Debug/net10.0/HTask.Domain.pdb
+HTask.Application/obj/Debug/net10.0/ref/HTask.Application.dll
+HTask.Application/obj/Debug/net10.0/refint/HTask.Application.dll
+HTask.Application/obj/Debug/net10.0/HTask.Application.dll
+HTask.Application/obj/Debug/net10.0/HTask.Application.pdb
+HTask.Application/obj/Debug/net10.0/HTask.Application.sourcelink.json
+HTask.Domain/bin/Debug/net10.0/HTask.Domain.dll
+HTask.Domain/bin/Debug/net10.0/HTask.Domain.pdb
+HTask.Domain/obj/Debug/net10.0/ref/HTask.Domain.dll
+HTask.Domain/obj/Debug/net10.0/refint/HTask.Domain.dll
+HTask.Domain/obj/Debug/net10.0/HTask.Domain.csproj.CoreCompileInputs.cache
+HTask.Domain/obj/Debug/net10.0/HTask.Domain.dll
+HTask.Domain/obj/Debug/net10.0/HTask.Domain.pdb
+HTask.Domain/obj/Debug/net10.0/HTask.Domain.sourcelink.json
+*.dll
+HTask.Infrastructure/bin/Debug/net10.0/HTask.Application.pdb
+HTask.Infrastructure/bin/Debug/net10.0/HTask.Domain.pdb
+HTask.Infrastructure/bin/Debug/net10.0/HTask.Infrastructure.pdb
+HTask.Infrastructure/obj/Debug/net10.0/HTask.Infrastructure.pdb
+HTask.Infrastructure/obj/Debug/net10.0/HTask.Infrastructure.sourcelink.json
