--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ HTask.Infrastructure/bin/Debug/net10.0/HTask.Infrastructure.pdb
 HTask.Infrastructure/obj/Debug/net10.0/HTask.Infrastructure.pdb
 HTask.Infrastructure/obj/Debug/net10.0/HTask.Infrastructure.sourcelink.json
 *.v2
+.vs/ProjectEvaluation/htasksolution.metadata.v10.bin
+.vs/ProjectEvaluation/htasksolution.projects.v10.bin
+.vs/ProjectEvaluation/htasksolution.strings.v10.bin
